--- a/next.html
+++ b/next.html
@@ -112,7 +112,7 @@
         <div class="text text-top-right">
             Бүгін сұлулық күні болса да,мен үшін ең сұлу жан-сен..Сенің сұлулығыңа қарап «Әлемді сұлулық құтқарады» деген сөзді түсіндім.
         </div> 
-        <a href="https://api.whatsapp.com/send?phone=6288210982908&text=Terimakasih%20sayangg%20(isi%20pesan%20mu)" class="button">BALAS</a>
+        <a href="https://api.whatsapp.com/send/?phone=77762117678&text&type=phone_number&app_absent=0" class="button">BALAS</a>
         <div class="text text-bottom-left">
             Ботақан сені көктемнің құлпырған,жылулық пен әсемдік мерекесімен құттықтаймын!Күндей жарқырап,гүлдей жайнап жүр.Жүзіңнен күлкі кетпесін! Мен әрқашан жаныңдамын!
         </div> 
